<resources>
    <string name="app_name">Memory Game</string>
    <string name="game_name_example_panda_fun">Game name (example: \'panda_fun\')</string>
    <string name="save">Save</string>
    <string name="moves_0">Moves: 0</string>
    <string name="pairs_0_4">Pairs: 0 / 4</string>
    <string name="memory_puzzle">Memory Puzzle</string>
    <string name="created_by">Created by :-</string>
    <string name="cse_6th_sem">CSE 6th SEM</string>
    <string name="registration_no_18105129008">Registration No : 18105129008</string>
    <string name="ritu_kumari_mahato">Ritu Kumari Mahato</string>
    <string name="memory_card">Memory card</string>
    <string name="easy_4_x_2">Easy (4 x 2)</string>
    <string name="medium_6_x_3">Medium (6 x 3)</string>
    <string name="hard_6_x_4">Hard (6 x 4)</string>
    <string name="enter_game_name">Enter game name</string>
</resources>